--- a/deno.json
+++ b/deno.json
@@ -17,7 +17,9 @@
     "@std/path": "jsr:@std/path@^1.0.0",
     "@std/cli": "jsr:@std/cli@^1.0.0",
     "@std/async": "jsr:@std/async@^1.0.0",
-    "@std/jsonc": "jsr:@std/jsonc@^1.0.0"
+    "@std/jsonc": "jsr:@std/jsonc@^1.0.0",
+    "zod": "npm:zod@^3.24.0",
+    "fuse.js": "npm:fuse.js@^7.0.0"
   },
   "compilerOptions": {
     "strict": true,
